--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Cash Chronicles</title>
+  <!-- Link to Google Font: Ample Display -->
+  <link href="https://fonts.googleapis.com/css2?family=Ample+Display&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: url('inline_image_preview.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
+      font-family: 'Ample Display', sans-serif; /* Apply Ample Display font */
+      background-color: black; /* Black background */
+      color: white; /* White text */
       text-align: center;
     }
 
@@ -27,7 +28,6 @@
       font-size: 48px;
       font-weight: bold;
       margin-bottom: 20px;
-      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
     }
 
     .top-right {
@@ -37,18 +37,18 @@
     }
 
     .top-right a {
-      color: white;
+      color: white; /* White text for buttons */
       text-decoration: none;
       font-size: 18px;
       margin-left: 15px;
       padding: 10px 20px;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(255, 255, 255, 0.2); /* Light transparent button background */
       border-radius: 5px;
       transition: background-color 0.3s ease;
     }
 
     .top-right a:hover {
-      background-color: rgba(255, 255, 255, 0.3);
+      background-color: rgba(255, 255, 255, 0.4); /* Lighter hover effect */
     }
 
     a {
