--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
 
   <div class="top-right">
     <a href="mailto:contact@cashchronicles.net">Contact</a>
-    <a href="#">Advertise</a>
     <a href="https://www.facebook.com/bdcashchronicles" target="_blank">Follow</a>
   </div>
 
   <div class="content">
     <h1>Cash Chronicles</h1>
-    <p>Know everything about money</p>
+    <h3>Know everything about money</h3>
   </div>
 
 </body>
