--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <!-- Link to Google Font: Ample Display -->
   <link href="https://fonts.googleapis.com/css2?family=Ample+Display&display=swap" rel="stylesheet">
   <style>
+    @import url('https://fonts.cdnfonts.com/css/albertus-mt-std');     
     body {
+      font-family: 'Albertus MT Std', sans-serif;    
       margin: 0;
       font-family: 'Ample Display', sans-serif; /* Apply Ample Display font */
       background-color: black; /* Black background */
@@ -17,6 +19,7 @@
     }
 
     .content {
+      font-family: 'Albertus MT Std', sans-serif;    
       display: flex;
       justify-content: center;
       align-items: center;
@@ -26,17 +29,20 @@
 
     h1 {
       font-size: 48px;
+      font-family: 'Albertus MT Std', sans-serif;                                     
       font-weight: bold;
       margin-bottom: 20px;
     }
 
     .top-right {
+      font-family: 'Albertus MT Std', sans-serif;    
       position: absolute;
       top: 20px;
       right: 20px;
     }
 
     .top-right a {
+      font-family: 'Albertus MT Std', sans-serif;    
       color: white; /* White text for buttons */
       text-decoration: none;
       font-size: 18px;
