--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Cash Chronicles</title>
-  <!-- Link to Google Font: Ample Display -->
-  <link href="https://fonts.googleapis.com/css2?family=Ample+Display&display=swap" rel="stylesheet">
+  <link rel = "icon" type = "image/png" href="Logo.png">
   <style>
     @import url('https://fonts.cdnfonts.com/css/albertus-mt-std');     
     body {
