--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Cash Chronicles</title>
-  <link rel = "icon" type = "image/png" href="android-chrome-512x512.png">
+  <link rel = "icon" type = "image/png" href="Logo.png">
   <style>
     @import url('https://fonts.cdnfonts.com/css/albertus-mt-std');     
     body {
